deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pagina-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pagina-web
  template:
    metadata:
      labels:
        app: pagina-web
    spec:
      containers:
      - name: pagina-web
        image: ignaciosa/front:test
        ports:
        - containerPort: 80
