service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pagina-web-service
spec:
  type: NodePort
  selector:
    app: pagina-web
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
